# span

./: Cargo.toml  NOTICE  README.md
.cargo/: config.toml
.github/: ci-main.yaml  dependabot.yml
.github/workflows/: cd-lib.yml  ci-containers.yaml  ci-main.yaml  ci-pr.yaml  ci.yml  pr.yml  randria.yaml  rust-checks.yaml
span/: Cargo.toml
span/src/: lib.rs  span.rs
span/src/date_module/: mod.rs
span/src/datetime_module/: mod.rs
span/src/time_module/: mod.rs
src/: builder.rs  date.rs  datetime.rs  error.rs  lib.rs  prelude.rs  span.rs  time.rs
src/date_module/: mod.rs
src/datetime_module/: mod.rs
src/time_module/: mod.rs
timeflow/: Cargo.toml
timeflow/src/: error.rs  lib.rs  time.rs
