[package]
name = "span"
description = "Ergonomic time handling (and traveling!) library with builder patterns, custom formatting, and seamless serialization for Date, Time, and DateTime operations"
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
publish.workspace = true
readme.workspace = true
authors.workspace = true
edition.workspace = true
license-file.workspace = true
version.workspace = true

[dependencies]
chrono = { version = "0.4.35", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "2.0.3"
serde_json = "1.0.114"

[features]
default = ["time", "date", "datetime"]
full = ["time", "date", "datetime"]
time = []
date = []
datetime = []
